--- a/shippable.yml
+++ b/shippable.yml
@@ -1,6 +1,7 @@
 # Language setting
 language: node_js
 
+
 # Version number
 node_js:
   - 0.10.25
@@ -31,3 +32,7 @@ script:
 after_script:
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
+  
+branches:
+  except:
+    - test-master   
