--- a/shippable.yml
+++ b/shippable.yml
@@ -31,4 +31,6 @@ after_script:
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
   
-
+branches:
+    only:
+     - master
