--- a/shippable.yml
+++ b/shippable.yml
@@ -32,5 +32,5 @@ after_script:
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
   
 branches:
-    only:
+    except:
      - master
