--- a/shippable.yml
+++ b/shippable.yml
@@ -23,4 +23,6 @@ after_script:
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
   
-cache: true
+#cache: true
+
+build_image: shippable/minv2
