--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,5 @@
 # Language setting
 language: node_js
-
-
 # Version number
 node_js:
   - 0.10.25
@@ -37,7 +35,7 @@ after_script:
   - ./node_modules/.bin/istanbul cover grunt -- -u tdd
   - ./node_modules/.bin/istanbul report cobertura --dir  shippable/codecoverage/
  
-cache: true  
+#cache: true  
 branches:
   except:
     - test-master   
