--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,7 @@ language: node_js
 # Version number
 node_js:
   - 0.10.25
-
+archive: true
 # The path for Xunit to output test reports
 env:
   - XUNIT_FILE=shippable/testresults/result.xml
