--- a/shippable.yml
+++ b/shippable.yml
@@ -8,7 +8,9 @@ node_js:
 
 # The path for Xunit to output test reports
 env:
+ global:
   - XUNIT_FILE=shippable/testresults/result.xml
+  - foo=bar
 
 # Create directories for test and coverage reports
 before_script:
